--- a/assets/css/mianuncio-nuevo.css
+++ b/assets/css/mianuncio-nuevo.css
@@ -352,6 +352,16 @@ h1 {
   filter: invert(6%) sepia(83%) saturate(6889%) hue-rotate(350deg) brightness(116%) contrast(104%);
 }
 
+.div-informacion-anuncio {
+  padding: 0.75em;
+  color: #3d3c3c;
+  background-color: #f1f1f1;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #cfcaca;
+  border-radius: 4px;
+}
+
 /* Formulario Nuevo Anuncio*/
 #div_telefono_preview,
 #div_celular_preview,
