--- a/assets/scss/base/_config.scss
+++ b/assets/scss/base/_config.scss
@@ -399,3 +399,10 @@ $border_style: solid;
 .icon-delete {
 	filter: $color_primary_filter_danger;
 }
+
+.div-informacion-anuncio {
+	padding: 0.75em;
+	color: $color_dark;
+	background-color: $color_gray_light;
+	@include border_div;
+}
